# MachineLearning-Retail-Store-Revenue-Prediction-Api-Service

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
api_service/: README.md
api_service/app/: main.py
api_service/models/forecasting/: phophetrevenue_forecastingregressor.joblib
app/: main.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: ordinal.joblib  phophetrevenue_forecastingregressor.joblib  scaler.joblib  xgbrevenue_predictiveregressor.joblib
models/predictive/: xgbrevenue_predictiveregressor.joblib
notebooks/: Patil_Monali-14370946-EDA.ipynb
notebooks/forecasting/: MachineLearning_ForecastingModel_Phophet.ipynb  Patil_Monali-14370946-Forecasting_Phophet.ipynb
notebooks/predictive/: MachineLearning_PredictiveModel_XGBoost.ipynb  Patil_Monali-14370946-Predictive_XGBoost.ipynb
reports/: Final Report.docx  ~$nal Report.docx
src/data/: sets.py
src/models/: null.py  performance.py
